# seedream_mcp

./: .gitignore  INTEGRATION_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  start_mcp_server.sh
docs/: mcp_doubao_lld.md
rules/: LLDesign.md  app.md  coding.md  codingplan.md  pages.md
src/mcp_doubao/: __init__.py  __main__.py  config.py  doubao_client.py  downloader.py  server.py  tools.py  types.py
tests/: test_compress_images.py
